[gd_scene load_steps=5 format=3 uid="uid://drgmpidp8y2r"]

[ext_resource type="Script" path="res://settings.gd" id="1_y15cd"]
[ext_resource type="Texture2D" uid="uid://ccsc851gdehas" path="res://Back.png" id="2_u5vb7"]
[ext_resource type="Texture2D" uid="uid://ctipqsnmpji8e" path="res://PNGS/Close_pressed.png" id="3_bbtry"]
[ext_resource type="Texture2D" uid="uid://dip4is7moex3l" path="res://PNGS/Back_hover.png" id="4_skubh"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y15cd")

[node name="Back Button" type="TextureButton" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 19.0
offset_top = 17.0
offset_right = 110.0
offset_bottom = 104.0
texture_normal = ExtResource("2_u5vb7")
texture_pressed = ExtResource("3_bbtry")
texture_hover = ExtResource("4_skubh")
stretch_mode = 0

[node name="V-Sync" type="CheckButton" parent="."]
layout_mode = 2
offset_left = 434.0
offset_top = 281.0
offset_right = 478.0
offset_bottom = 305.0
scale = Vector2(2, 2)

[node name="V-Sync Lbl" type="Label" parent="V-Sync"]
texture_filter = 1
layout_mode = 0
offset_left = 44.5
offset_top = -0.5
offset_right = 205.5
offset_bottom = 40.5
text = "V-Sync"

[node name="Fullscreen" type="CheckButton" parent="."]
layout_mode = 2
offset_left = 434.0
offset_top = 327.0
offset_right = 478.0
offset_bottom = 351.0
scale = Vector2(2, 2)

[node name="Fullscreen Lbl" type="Label" parent="Fullscreen"]
texture_filter = 1
layout_mode = 0
offset_left = 42.5
offset_top = -0.5
offset_right = 121.5
offset_bottom = 22.5
text = "Fullscreen
"

[connection signal="pressed" from="Back Button" to="." method="_on_back_button_pressed"]
[connection signal="toggled" from="V-Sync" to="." method="_on_v_sync_toggled"]
[connection signal="toggled" from="Fullscreen" to="." method="_on_fullscreen_toggled"]
